<resources>
    <string name="app_name">Землянский Григорий</string>
    <string name="email">zemlyanscky.grigorij@yandex.ru</string>
    <string name="MyPhone">89514700303</string>
    <string name="vk">https://vk.com/id23721588</string>
    <string name="Github">https://github.com/zemlyansckygrigorij/DevIntensive</string>
    <string name="information">Хочу много денег, работу не предлагать</string>





    <string name="activity_main.title.rating_textview">Рейтинг</string>
    <string name="activity_main.title.code_strings_textview">Написано строк кода</string>
    <string name="activity_main.title.projects_textview">Проектов</string>
    <string name="activity_main.title.mobile_textview">Мобильный</string>
    <string name="activity_main.title.email_textview">E-mail</string>
    <string name="activity_main.title.vk_textview">Профиль в VK</string>
    <string name="activity_main.title.github_textbiew">Репозиторй</string>
    <string name="activity_main.title.about_textbiew">О себе</string>
    <string name="drawer_menu.title.user_profile">Мой профиль</string>
    <string name="drawer_menu.title.team">Команда</string>
    <string name="activity_main.title.change_profile_photo">Изменить фотографию профиля</string>
    <string name="dialog.selection.load_from_galery">Загрузить из галереи</string>
    <string name="dialog.selection.take_photo">Сделать снимок</string>
    <string name="dialog.selection.cancel">Отменить</string>
    <string name="dialog.title.change_photo">Изменить фотографию профиля</string>
    <string name="dialog.title.select_picture">Выберите фото</string>
    <string name="snackbar.message.need_take_permissions">Необходимо дать требуемые разрешения</string>
    <string name="main_activity_error_not_found_call_app">Не найдено приложение для звонка</string>
    <string name="main_activity.error.not_found_email_app">Не найдено приложения для отправки email</string>
    <string name="main_activity_error_not_found_vk_app">Не найдено приложения для открытия страницы VK</string>
    <string name="main_activity_error_not_found_git_app">Не найдено приложения для открытия репозитория</string>
    <string name="user_profile.invalidate.number">Неверный формат номера телефона</string>
    <string name="user_profile.invalidate.email">Неверный формат email адреса</string>
    <string name="user_profile.invalidate.vk">Неверный формат адреса VK</string>
    <string name="user_profile.invalidate.github">Неверный формат ссылки на GitHub</string>
    <string name="auth.hint.e_mail">E-mail</string>
    <string name="auth.hint.pass">Пароль</string>
    <string name="auth.title.input">ВОЙТИ</string>
    <string name="auth.title.forgot_pass">Забыли пароль?</string>


    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Выбрать из галереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_picture">выберите фото</string>
    <string name="load_from_camera_permissions_request">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="auth_enter_tv">ВОЙТИ</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_button_enter">ВОЙТИ</string>
    <string name="auth_password_hint_tv">Забыли пароль?</string>
    <string name="auth_email_txt">Введите e-mail</string>
    <string name="auth_pass_txt">Введите пароль</string>

    <string name="error_correct_profile">Исправьте ошибки в профиле</string>
    <string name="error_permission_need">Для корректной работы необходимо дать требуемые разрешения</string>
    <string name="approve">Разрешить</string>
    <string name="menu_login_vk">Войти через VK</string>
    <string name="more_info_btn">Просмотр</string>
    <string name="search_title">Поиск</string>
</resources>
